feat: :sparkles: diseño inicio sesiòn
quedo el diseño y la pagina principal de inicio de sesion

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <br>
                 <input type="contraseña" name="contraseña" placeholder="Contraseña">
                 <br>
+                <div class="recordar-datos">
+                    <input type="checkbox" id="recordar" name="recordar">
+                    <label for="recordar">Recordar datos</label>
+                  </div>
+                <br>
                 <button type="submit">INGRESAR</button>
             </form>
 
