feat: :construction: Arreglos diseño-estructura
Se arreglo el diseño y partes de la estructura

--- a/registro.html
+++ b/registro.html
@@ -15,7 +15,7 @@
     
     <div class="mobile-only">
         <section class="registro-container">
-          <div class="logo">
+          <div class="logoregistro">
             <img src="imagenlogo.png" alt="Logo ACME AIR">
           </div>
 
@@ -24,27 +24,27 @@
     <form>
         <div class="form-group">
             <label for="nombre">Nombre Completo</label>
-            <input type="text" id="nombre" name="nombre">
+            <input type="text" id="nombre" name="nombre" placeholder="Nombre Completo">
         </div>
 
         <div class="form-group">
             <label for="identificacion">No. Identificación</label>
-            <input type="text" id="identificacion" name="identificacion">
+            <input type="text" id="identificacion" name="identificacion" placeholder="No. Identificación">
         </div>
 
         <div class="form-group">
             <label for="email">E-mail</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" placeholder="E-mail">
         </div>
 
         <div class="form-group">
             <label for="telefono">Téléfono</label>
-            <input type="tel" id="telefono" name="telefono">
+            <input type="tel" id="telefono" name="telefono" placeholder=" Téléfono">
         </div>
 
         <div class="form-group">
             <label for="ciudad">Ciudad</label>
-            <input type="text" id="ciudad" name="ciudad">
+            <input type="text" id="ciudad" name="ciudad" placeholder="Ciudad">
         </div>
 
         <button type="submit" class="btn-guardar">GUARDAR</button>
