--- a/recuperar.html
+++ b/recuperar.html
@@ -25,7 +25,7 @@
             
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required placeholder="E-mail">
             </div>
             
             <p class="info-text">Si el e-mail se encuentra registrado se enviará un link para continuar con la recuperación de su contraseña.</p>
