feat: :ambulance: arreglos
arreglos simples en el codigo y estructura

--- a/crearcontraseña.html
+++ b/crearcontraseña.html
@@ -14,7 +14,8 @@
     </div>
 
     <div class="mobile-only">
-        <section class="crearcontraseña-container">            <div class="logo">
+        <section class="crearcontraseña-container">            
+            <div class="logocrearcontraseña">
                 <img src="imagenlogo.png" alt="logo ACME AIR">
             </div>
 
