--- a/registro.html
+++ b/registro.html
@@ -19,7 +19,7 @@
             <img src="imagenlogo.png" alt="Logo ACME AIR">
           </div>
 
-    <h1>Crear cuenta </h1>
+    <h1>REGISTRO</h1>
 
     <form>
         <div class="form-group">
