fix: :bug: Arreglo de bugs
Se arreglaron algunos bugs que no permitian abrir otras interfases

--- a/registro.html
+++ b/registro.html
@@ -21,7 +21,8 @@
 
     <h1>REGISTRO</h1>
 
-    <form>
+    <form action="crearcontrasena.html" method="get" novalidate>
+
         <div class="form-group">
             <label for="nombre">Nombre Completo</label>
             <input type="text" id="nombre" name="nombre" placeholder="Nombre Completo">
@@ -48,6 +49,12 @@
         </div>
 
         <button type="submit" class="btn-guardar">GUARDAR</button>
+
+        <div class="links">
+        </div>
+        
+
+        
     </form>
 </body>
 </html>
