feat: :sparkles: Diseño menu
Quedo el apartado de menu basico, falta corregir

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <h1>Iniciar Sesiòn</h1>
 
-            <form action="home.html" method="get" novalidate>
+            <form action="menu.html" method="get" novalidate>
                 <input type="email" name="email" placeholder="Correo electronico">
                 <br>
                 <input type="contraseña" name="contraseña" placeholder="Contraseña">
