--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
     <div class="desktop-warning">
         <h2>Esta aplicaciòn solo està disponible para dispositivos mòviles</h2>
         <p>Por favor accede desde un celular. </p>
@@ -19,11 +18,12 @@
             <div class="logomenu">
                 <img src="imagenlogo.png" alt="logo ACME AIR">
             </div>
+        
     <div class="welcome">
         Hola <span>Santiago Romero </span> <br>
         ¿Qué quieres hacer?
         <div class="menu-container">
-            <a href="login.html" class="menu-item logout">
+            <a href="./index.html" class="menu-item logout">
                 <span>Cerrar Sesión</span>
                 <div class="menu-icon">
                     <i class="fas fa-sign-out-alt"></i>
