fix: :bug: Bug apartado crear contraseña
Se soluciono problema en el apartado crear contraseña

--- a/crearcontrasena.html
+++ b/crearcontrasena.html
@@ -32,7 +32,7 @@
                     <input type="password" id="repeat-password" name="repeat-password" required placeholder="Repetir Contraseña">
                 </div>
 
-                <button type="submit" class="btn-submit">GUARDAR</button>
+                <a href="./menu.html" class="btn-submit">GUARDAR</a>
             </form>
 
 
