feat: :zap: arreglos diseño y estructura
arreglos apartado buscar vuelo, en diseño y estructura

--- a/buscarvuelos.html
+++ b/buscarvuelos.html
@@ -18,12 +18,13 @@
             <div class="logobuscarvuelos">
                 <img src="imagenlogo.png" alt="logo ACME AIR">
             </div>
+ <hr>
     <div class="user-info">
         <span class="user-name">Santiago Romero</span>
         <br>
         <a href="./index.html" class="cerrarsesion">Cerrar Sesion</a>
     </div>
-
+<hr>
     <main class="seccion-busqueda">
         <h1 class="search-tittle">Busqueda de Vuelos</h1>
 
@@ -59,7 +60,7 @@
     <label for="fecha-regreso"></label>
     <input type="text" name="fecha-regreso" id="fecha-regreso" placeholder="Fecha de regreso">
 </div>
-<button type="submit" class="btn-guardar">GUARDAR</button>
+<button type="submit" class="btn-guardar">BUSCAR</button>
 
 </form>
 
