--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
                     <i class="fas fa-sign-out-alt"></i>
                 </div>
             </a>
-            <a href="buscar-vuelos.html" class="menu-item">
+            <a href="buscarvuelos.html" class="menu-item">
                 <span>Buscar vuelos</span>
                 <div class="menu-icon">
                     <i class="fas fa-search"></i>
