--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
                     <i class="fas fa-search"></i>
                 </div>
             </a>
-            <a href="check-in.html" class="menu-item">
+            <a href="checkin.html" class="menu-item">
                 <span>Check In</span>
                 <div class="menu-icon">
                     <i class="fas fa-ticket-alt"></i>
