--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Menú Principal</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="desktop-warning">
@@ -26,25 +25,25 @@
             <a href="./index.html" class="menu-item logout">
                 <span>Cerrar Sesión</span>
                 <div class="menu-icon">
-                    <i class="fas fa-sign-out-alt"></i>
+                    <img src="./logocerrarsesion.jpg" alt="Cerrar sesion">
                 </div>
             </a>
             <a href="buscarvuelos.html" class="menu-item">
                 <span>Buscar vuelos</span>
                 <div class="menu-icon">
-                    <i class="fas fa-search"></i>
+                    <img src="./logobuscarvuelos.png" alt="Buscar vuelos">
                 </div>
             </a>
             <a href="checkin.html" class="menu-item">
                 <span>Check In</span>
                 <div class="menu-icon">
-                    <i class="fas fa-ticket-alt"></i>
+                    <img src="./check.png" alt="Check In">
                 </div>
             </a>
             <a href="misvuelos.html" class="menu-item">
                 <span>Mis Vuelos</span>
                 <div class="menu-icon">
-                    <i class="fas fa-plane"></i>
+                    <img src="./misvuelosicono.jpg" alt="Mis vuelos ">
                 </div>
             </a>
         </div>
