fix: :bug: Arreglos de bugs
se arreglaron bugs que no permitian acceder a otros apartados y demas

--- a/Html/crearcontrasena.html
+++ b/Html/crearcontrasena.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Crear Contraseña </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
     <div class="mobile-only">
         <section class="crearcontraseña-container">            
             <div class="logocrearcontraseña">
-                <img src="imagenlogo.png" alt="logo ACME AIR">
+                <img src="../Img/imagenlogo.png" alt="logo ACME AIR">
             </div>
 
             <h2 class="form-title">Crear Contraseña</h2>
