--- a/Html/menu.html
+++ b/Html/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Menú Principal</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
     <div class="desktop-warning">
@@ -15,35 +15,35 @@
     <div class="mobile-only">
         <section class="menu-container">
             <div class="logomenu">
-                <img src="imagenlogo.png" alt="logo ACME AIR">
+                <img src="../Img/imagenlogo.png" alt="logo ACME AIR">
             </div>
         
     <div class="welcome">
         Hola <span>Santiago Romero </span> <br>
         ¿Qué quieres hacer?
         <div class="menu-container">
-            <a href="./index.html" class="menu-item logout">
+            <a href="../index.html" class="menu-item logout">
                 <span>Cerrar Sesión</span>
                 <div class="menu-icon">
-                    <img src="./logocerrarsesion.jpg" alt="Cerrar sesion">
+                    <img src="../Img/logocerrarsesion.jpg" alt="Cerrar sesion">
                 </div>
             </a>
-            <a href="buscarvuelos.html" class="menu-item">
+            <a href="./buscarvuelos.html" class="menu-item">
                 <span>Buscar vuelos</span>
                 <div class="menu-icon">
-                    <img src="./logobuscarvuelos.png" alt="Buscar vuelos">
+                    <img src="../Img/logobuscarvuelos.png" alt="Buscar vuelos">
                 </div>
             </a>
-            <a href="checkin.html" class="menu-item">
+            <a href="./checkin.html" class="menu-item">
                 <span>Check In</span>
                 <div class="menu-icon">
-                    <img src="./check.png" alt="Check In">
+                    <img src="../Img/check.png" alt="Check In">
                 </div>
             </a>
-            <a href="misvuelos.html" class="menu-item">
+            <a href="./misvuelos.html" class="menu-item">
                 <span>Mis Vuelos</span>
                 <div class="menu-icon">
-                    <img src="./misvuelosicono.jpg" alt="Mis vuelos ">
+                    <img src="../Img/misvuelosicono.jpg" alt="Mis vuelos ">
                 </div>
             </a>
         </div>
