--- a/Html/registro.html
+++ b/Html/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Registro</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
     <div class="mobile-only">
         <section class="registro-container">
             <div class="logoregistro">
-                <img src="imagenlogo.png" alt="Logo ACME AIR">
+                <img src="../Img/imagenlogo.png" alt="Logo ACME AIR">
             </div>
 
             <h1>REGISTRO</h1>
