--- a/Html/buscarvuelos.html
+++ b/Html/buscarvuelos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Buscar Vuelos </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
 
@@ -16,13 +16,13 @@
     <div class="mobile-only">
         <section class="buscarvuelos-container">
             <div class="logobuscarvuelos">
-                <img src="imagenlogo.png" alt="logo ACME AIR">
+                <img src="../Img/imagenlogo.png" alt="logo ACME AIR">
             </div>
  <hr>
     <div class="user-info">
         <span class="user-name">Santiago Romero</span>
         
-        <a href="./index.html" class="cerrarsesion">Cerrar Sesion</a>
+        <a href="../index.html" class="cerrarsesion">Cerrar Sesion</a>
     </div>
 <hr>
 <main class="seccion-busqueda">
