--- a/Html/checkin.html
+++ b/Html/checkin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Check In</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
     <div class="desktop-warning">
@@ -15,7 +15,7 @@
     <div class="mobile-only">
         <section class="checkin-container">
           <div class="logocheckin">
-            <img src="imagenlogo.png" alt="Logo ACME AIR">
+            <img src="../Img/imagenlogo.png" alt="Logo ACME AIR">
           </div>
 
           <main class="checkin-container">
@@ -23,7 +23,7 @@
               <div class="avatar"></div>
               <div>
                 <p class="username">Santiago Romero</p>
-                <p class="logout"><a href="index.html">Cerrar Sesión</a></p>
+                <p class="logout"><a href="../index.html">Cerrar Sesión</a></p>
               </div>
             </section>
         
@@ -31,7 +31,7 @@
         
             <div class="flight-card">
               <div class="icon-block">
-                <img src="./logoavion.png" class="icon" alt="Avión" />
+                <img src="../Img/logoavion.png" class="icon" alt="Avión" />
               </div>
               <div class="flight-details">
                 <p class="time">05:30 - 06:30</p>
