--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Iniciar Sesion</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Css/style.css">
 </head>
 <body>
 
@@ -16,15 +16,15 @@
     <div class="mobile-only">
         <section class="login-container">
             <div class="logo">
-                <img src="imagenlogo.png" alt="logo ACME AIR">
+                <img src="./Img/imagenlogo.png" alt="logo ACME AIR">
             </div>
 
             <h1>Iniciar Sesiòn</h1>
 
-            <form action="menu.html" method="get" novalidate>
+            <form action="./Html/menu.html" method="get" novalidate>
                 <input type="email" name="email" placeholder="Correo electronico">
                 <br>
-                <input type="contraseña" name="contraseña" placeholder="Contraseña">
+                <input type="password" name="contraseña" placeholder="contraseña">
                 <br>
                 <div class="recordar-datos">
                     <input type="checkbox" id="recordar" name="recordar">
@@ -35,9 +35,9 @@
             </form>
 
             <div class="links">
-                <a href="registro.html" title="Crear cuenta nueva">Crear cuenta</a>
+                <a href="./Html/registro.html" title="Crear cuenta nueva">Crear cuenta</a>
                 <br>
-                <a href="recuperar.html" title="recuperar contraseña">¿Has olvidado tu contraseña?</a>
+                <a href="./Html/recuperar.html" title="recuperar contraseña">¿Has olvidado tu contraseña?</a>
             </div>
         </section>
     </div>
