feat: :sparkles: Arreglos
diseño y estructura

--- a/html/checkin.html
+++ b/html/checkin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Check In</title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="desktop-warning">
@@ -14,8 +14,8 @@
     
     <div class="mobile-only">
         <section class="checkin-container">
-          <div class="logocheckin">
-            <img src="../Img/imagenlogo.png" alt="Logo ACME AIR">
+          <div class="logocheckin" id="head">
+            <img src="../img/imagenlogo.png" alt="Logo ACME AIR">
           </div>
 
           <main class="checkin-container">
@@ -31,7 +31,7 @@
         
             <div class="flight-card">
               <div class="icon-block">
-                <img src="../Img/logoavion.png" class="icon" alt="Avión" />
+                <img src="../img/logoavion.png" class="icon" alt="Avión" />
               </div>
               <div class="flight-details">
                 <p class="time">05:30 - 06:30</p>
