--- a/html/vuelosdisponibles.html
+++ b/html/vuelosdisponibles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Vuelos Disponibles</title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <div class="desktop-warning">
@@ -14,8 +14,8 @@
 
 <div class="mobile-only">
     <section class="vuelosdisponibles-container">
-        <div class="logo-vuelosdisponibles">
-            <img src="../Img/imagenlogo.png" alt="logo ACME AIR">
+        <div class="logo-vuelosdisponibles" id="head">
+            <img src="../img/imagenlogo.png" alt="logo ACME AIR">
         </div>
 
         <main class="container">
@@ -31,7 +31,7 @@
 
             <div class="flight-card">
                 <div>
-                    <img src="../Img/logoavion.png" class="icon" alt="Avion">
+                    <img src="../img/logoavion.png" class="icon" alt="Avion">
                     <p class="time">05:30 - 06:30</p>
                     <p class="duration">1h 30 min</p>
                 </div>
@@ -43,7 +43,7 @@
           
               <div class="flight-card">
                 <div>
-                  <img src="../Img/logoavion.png" class="icon" alt="Avión" />
+                  <img src="../img/logoavion.png" class="icon" alt="Avión" />
                   <p class="time">10:30 - 12:05</p>
                   <p class="duration">1h 30 min</p>
                 </div>
@@ -55,7 +55,7 @@
           
               <div class="flight-card">
                 <div>
-                  <img src="../Img/logoavion.png" class="icon" alt="Avión" />
+                  <img src="../img/logoavion.png" class="icon" alt="Avión" />
                   <p class="time">14:15 - 15:45</p>
                   <p class="duration">1h 30 min</p>
                 </div>
