--- a/html/buscarvuelos.html
+++ b/html/buscarvuelos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Buscar Vuelos </title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -15,8 +15,8 @@
 
     <div class="mobile-only">
         <section class="buscarvuelos-container">
-            <div class="logobuscarvuelos">
-                <img src="../Img/imagenlogo.png" alt="logo ACME AIR">
+            <div class="logobuscarvuelos" id="head">
+                <img src="../img/imagenlogo.png" alt="logo ACME AIR">
             </div>
  <hr>
     <div class="user-info">
