--- a/html/crearcontrasena.html
+++ b/html/crearcontrasena.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Crear Contraseña </title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -15,8 +15,8 @@
 
     <div class="mobile-only">
         <section class="crearcontraseña-container">            
-            <div class="logocrearcontraseña">
-                <img src="../Img/imagenlogo.png" alt="logo ACME AIR">
+            <div class="logocrearcontraseña" id="head">
+                <img src="../img/imagenlogo.png" alt="logo ACME AIR">
             </div>
 
             <h2 class="form-title">Crear Contraseña</h2>
