--- a/html/menu.html
+++ b/html/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Menú Principal</title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="desktop-warning">
@@ -14,8 +14,8 @@
 
     <div class="mobile-only">
         <section class="menu-container">
-            <div class="logomenu">
-                <img src="../Img/imagenlogo.png" alt="logo ACME AIR">
+            <div class="logomenu" id="head">
+                <img src="../img/imagenlogo.png" alt="logo ACME AIR">
             </div>
         
     <div class="welcome">
@@ -25,25 +25,25 @@
             <a href="../index.html" class="menu-item logout">
                 <span>Cerrar Sesión</span>
                 <div class="menu-icon">
-                    <img src="../Img/logocerrarsesion.jpg" alt="Cerrar sesion">
+                    <img src="../img/logocerrarsesion.jpg" alt="Cerrar sesion">
                 </div>
             </a>
             <a href="./buscarvuelos.html" class="menu-item">
                 <span>Buscar vuelos</span>
                 <div class="menu-icon">
-                    <img src="../Img/logobuscarvuelos.png" alt="Buscar vuelos">
+                    <img src="../img/logobuscarvuelos.png" alt="Buscar vuelos">
                 </div>
             </a>
             <a href="./checkin.html" class="menu-item">
                 <span>Check In</span>
                 <div class="menu-icon">
-                    <img src="../Img/check.png" alt="Check In">
+                    <img src="../img/check.png" alt="Check In">
                 </div>
             </a>
             <a href="./misvuelos.html" class="menu-item">
                 <span>Mis Vuelos</span>
                 <div class="menu-icon">
-                    <img src="../Img/misvuelosicono.jpg" alt="Mis vuelos ">
+                    <img src="../img/misvuelosicono.jpg" alt="Mis vuelos ">
                 </div>
             </a>
         </div>
