--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME AIR - Iniciar Sesion</title>
-    <link rel="stylesheet" href="./Css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -15,13 +15,13 @@
 
     <div class="mobile-only">
         <section class="login-container">
-            <div class="logo">
-                <img src="./Img/imagenlogo.png" alt="logo ACME AIR">
+            <div class="logo" id="head">
+                <img src="./img/imagenlogo.png" alt="logo ACME AIR">
             </div>
 
             <h1>Iniciar Sesiòn</h1>
 
-            <form action="./Html/menu.html" method="get" novalidate>
+            <form action="./html/menu.html" method="get" novalidate>
                 <input type="email" name="email" placeholder="Correo electronico">
                 <br>
                 <input type="password" name="contraseña" placeholder="contraseña">
@@ -35,9 +35,9 @@
             </form>
 
             <div class="links">
-                <a href="./Html/registro.html" title="Crear cuenta nueva">Crear cuenta</a>
+                <a href="./html/registro.html" title="Crear cuenta nueva">Crear cuenta</a>
                 <br>
-                <a href="./Html/recuperar.html" title="recuperar contraseña">¿Has olvidado tu contraseña?</a>
+                <a href="./html/recuperar.html" title="recuperar contraseña">¿Has olvidado tu contraseña?</a>
             </div>
         </section>
     </div>
