feat: :zap: degradado
se agrego degradado en el encabezado

--- a/html/menu.html
+++ b/html/menu.html
@@ -8,44 +8,49 @@
 </head>
 <body>
     <div class="desktop-warning">
-        <h2>Esta aplicaciòn solo està disponible para dispositivos mòviles</h2>
-        <p>Por favor accede desde un celular. </p>
+        <h2>Esta aplicación solo está disponible para dispositivos móviles</h2>
+        <p>Por favor accede desde un celular.</p>
     </div>
 
     <div class="mobile-only">
         <section class="menu-container">
-            <div class="logomenu" id="head">
+        
+            <div class="header-degradado">
                 <img src="../img/imagenlogo.png" alt="logo ACME AIR">
             </div>
-        
-    <div class="welcome">
-        Hola <span>Santiago Romero </span> <br>
-        ¿Qué quieres hacer?
-        <div class="menu-container">
-            <a href="../index.html" class="menu-item logout">
-                <span>Cerrar Sesión</span>
-                <div class="menu-icon">
-                    <img src="../img/logocerrarsesion.jpg" alt="Cerrar sesion">
-                </div>
-            </a>
-            <a href="./buscarvuelos.html" class="menu-item">
-                <span>Buscar vuelos</span>
-                <div class="menu-icon">
-                    <img src="../img/logobuscarvuelos.png" alt="Buscar vuelos">
-                </div>
-            </a>
-            <a href="./checkin.html" class="menu-item">
-                <span>Check In</span>
-                <div class="menu-icon">
-                    <img src="../img/check.png" alt="Check In">
-                </div>
-            </a>
-            <a href="./misvuelos.html" class="menu-item">
-                <span>Mis Vuelos</span>
-                <div class="menu-icon">
-                    <img src="../img/misvuelosicono.jpg" alt="Mis vuelos ">
-                </div>
-            </a>
-        </div>
+
+            <div class="welcome">
+                Hola <span>Santiago Romero</span> <br>
+                ¿Qué quieres hacer?
+            </div>
+
+            <div class="menu-container">
+                <a href="../index.html" class="menu-item logout">
+                    <span>Cerrar Sesión</span>
+                    <div class="menu-icon">
+                        <img src="../img/logocerrarsesion.jpg" alt="Cerrar sesión">
+                    </div>
+                </a>
+                <a href="./buscarvuelos.html" class="menu-item">
+                    <span>Buscar vuelos</span>
+                    <div class="menu-icon">
+                        <img src="../img/logobuscarvuelos.png" alt="Buscar vuelos">
+                    </div>
+                </a>
+                <a href="./checkin.html" class="menu-item">
+                    <span>Check In</span>
+                    <div class="menu-icon">
+                        <img src="../img/check.png" alt="Check In">
+                    </div>
+                </a>
+                <a href="./misvuelos.html" class="menu-item">
+                    <span>Mis Vuelos</span>
+                    <div class="menu-icon">
+                        <img src="../img/misvuelosicono.jpg" alt="Mis vuelos">
+                    </div>
+                </a>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
