--- a/html/registro.html
+++ b/html/registro.html
@@ -15,7 +15,7 @@
 
     <div class="mobile-only">
         <section class="registro-container">
-            <div class="logoregistro" id="head">
+            <div class="header-degradado" id="head">
                 <img src="../img/imagenlogo.png" alt="Logo ACME AIR">
             </div>
 
