--- a/html/crearcontrasena.html
+++ b/html/crearcontrasena.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACME AIR - Crear Contraseña </title>
+    <title>ACME AIR - Crear Contraseña</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
     <div class="desktop-warning">
-        <h2>Esta aplicaciòn solo està disponible para dispositivos mòviles</h2>
-        <p>Por favor accede desde un celular. </p>
+        <h2>Esta aplicación solo está disponible para dispositivos móviles</h2>
+        <p>Por favor accede desde un celular.</p>
     </div>
 
     <div class="mobile-only">
-        <section class="crearcontraseña-container">            
-            <div class="logocrearcontraseña" id="head">
+        <section class="crearcontraseña-container">  
+        
+            <div class="header-degradado">
                 <img src="../img/imagenlogo.png" alt="logo ACME AIR">
             </div>
 
@@ -34,8 +35,7 @@
 
                 <a href="./menu.html" class="btn-submit">GUARDAR</a>
             </form>
-
-
-    
+        </section>
+    </div>
 </body>
 </html>
